# Backpropagation

./: CMakeLists.txt  Image_saver.cpp  Image_saver.h  Layers.cpp  Layers.h  Neuron.cpp  Neuron.h  README.md  instruction.txt  main.cpp
